src/test/deca/context/invalid/ContextAvecObjet/ManipulationClasse/FauxPrint.deca
//Description
//  Faute d'ortho dans un println
//
//Résulat
//  Erreur contextuelle ligne 8
//  identificateur non défini
{
    printn("Je suis print mal écrit");
}
